...
            "AppName" to R.string.app_name,
            "Apply" to R.string.apply,
            "AnyCategory" to R.string.any_category,
            "AnyDate" to R.string.any_date,
            "AnyAgeRestriction" to R.string.any_age_restriction,
            "AnyPrice" to R.string.any_price,
            "AutoplayLabel" to R.string.autoplay_label,
            "BackDescription" to R.string.back_description,
            "BackHint" to R.string.back_hint,
            "CategoryCinema" to R.string.category_cinema,
            "CategoryFood" to R.string.category_food,
            "CategoryLabel" to R.string.category_label,
            "CategorySearchUnavailableError" to R.string.category_search_unavailable_error,
...
            "ChooseLocation" to R.string.choose_location,
            "ChooseAttendance" to R.string.choose_attendance,
            "ChooseDates" to R.string.choose_dates,
            "ChooseDatesTitle" to R.string.choose_dates_title,
            "Clear" to R.string.clear,
            "ClearAllRecentSearches" to R.string.clear_all_recent_searches,
            "Close" to R.string.close,
            "Cancel" to R.string.cancel,
            "ContactHint" to R.string.contact_hint,
            "ContactTitle" to R.string.contact_title,
            "DateFromFormat" to R.string.date_from_format,
            "DateLabel" to R.string.date_label,
            "DateUntilFormat" to R.string.date_until_format,
            "Done" to R.string.done,
            "EditFilters" to R.string.edit_filters,
            "EventDetailsDescription" to R.string.event_details_description,
            "EventDetailsHint" to R.string.event_details_hint,
            "FavoritesCardHint" to R.string.favorites_card_hint,
            "FavoritesTitle" to R.string.favorites_title,
            "FeedbackHint" to R.string.feedback_hint,
            "FeedbackTitle" to R.string.feedback_title,
            "FeedLoadErrorFallback" to R.string.feed_load_error_fallback,
            "FeedLoadErrorMessage" to R.string.feed_load_error_message,
            "FeedUnavailableTitle" to R.string.feed_unavailable_title,
            "FilterFree" to R.string.filter_free,
...
            "LoadingLocalEvents" to R.string.loading_local_events,
            "LoadingCategories" to R.string.loading_categories,
            "LoadingMore" to R.string.loading_more,
            "LoadingResults" to R.string.loading_results,
            "LoadingSuggestions" to R.string.loading_suggestions,
            "LocationInputError" to R.string.location_input_error,
            "MediaLabel" to R.string.media_label,
            "LocationLabel" to R.string.location_label,
            "LocationPermissionUsageDescription" to R.string.location_permission_usage_description,
            "LocationPlaceholder" to R.string.location_placeholder,
            "LocationRequiredError" to R.string.location_required_error,
            "LocationRequiredLabel" to R.string.location_required_label,
            "LocationsLabel" to R.string.locations_label,
...
            "SearchTermsPlaceholder" to R.string.search_terms_placeholder,
            "SearchTermsTitle" to R.string.search_terms_title,
            "SeeAllRecentSearchesFormat" to R.string.see_all_recent_searches_format,
            "ShowResults" to R.string.show_results,
            "SelectLocationHint" to R.string.select_location_hint,
            "SettingsButtonHint" to R.string.settings_button_hint,
            "SettingsTitle" to R.string.settings_title,
            "ShareCurrentEventHint" to R.string.share_current_event_hint,
            "ShareEventDescription" to R.string.share_event_description,
            "ShareSubtitle" to R.string.share_subtitle,
            "ShareThisEventHint" to R.string.share_this_event_hint,
            "ShareTitle" to R.string.share_title,
            "SuggestedLabel" to R.string.suggested_label,
...
